Update Adipta Martulandi - Credit Scoring Modelling.ipynb

--- a/Adipta Martulandi - Credit Scoring Modelling.ipynb
+++ b/Adipta Martulandi - Credit Scoring Modelling.ipynb
@@ -5579,7 +5579,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Summarizing Score for First Try Modelling"
+    "### Summarizing Score for Second Try Modelling"
    ]
   },
   {
